Time Tracker Developer Org/src/objects/ManualLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Disengage_Time__c</fullName>
        <label>Disengage Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration in seconds when the timer was engaged</description>
        <formula>(Disengage_Time__c -  Engage_Time__c) * 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engage_Time__c</fullName>
        <label>Engage Time</label>
        <type>DateTime</type>
    </fields>
    <label>Manual Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Disengage_Time__c</columns>
        <columns>Engage_Time__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>MLN Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>